--- a/_config.yml
+++ b/_config.yml
@@ -24,33 +24,30 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "George-Michael Pescaru"
-  #pronouns         : # example: "she/her"  
+  pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Idaho"
-  #employer         : "Red Brick University"
+  employer         : #"Red Brick University"
   uri              : # URL
-  #email            : "gmpescaru@gmail.com" 
+  email            : #
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=kLw-BXUAAAAJ"
   impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #
   researchgate     : # URL
   scopus           : # URL
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
+  github           : #
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "gmpescaru.bsky.social"
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
